tests/invalid/module_load_wrong_return.wio
@ModuleLoad
fn BootModule() {
}

fn Entry() -> i32 {
    return 0;
}
